[tool.poetry]
name = "pulumi-take1"
version = "0.1.0"
description = ""
authors = ["Vincent Bernat <vincent@bernat.ch>"]

[tool.poetry.dependencies]
python = "^3.9"
pulumi = "3.44.3"
pulumi-aws = "5.19.0"
pulumi-hcloud = "1.10.1"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
